--- a/.htaccess
+++ b/.htaccess
@@ -24,7 +24,8 @@
 ############################################
 ## default index file
 
-    DirectoryIndex index.php
+    # DirectoryIndex index.php
+    DirectoryIndex lightspeed.php
 
 <IfModule mod_php5.c>
 
@@ -143,7 +144,8 @@
 ############################################
 ## rewrite everything else to index.php
 
-    RewriteRule .* index.php [L]
+    # RewriteRule .* index.php [L]
+    RewriteRule .* lightspeed.php [L]
 
 </IfModule>
 
