--- a/.htaccess
+++ b/.htaccess
@@ -24,8 +24,7 @@
 ############################################
 ## default index file
 
-    # DirectoryIndex index.php
-    DirectoryIndex lightspeed.php
+    DirectoryIndex index.php
 
 <IfModule mod_php5.c>
 
@@ -144,8 +143,7 @@
 ############################################
 ## rewrite everything else to index.php
 
-    # RewriteRule .* index.php [L]
-    RewriteRule .* lightspeed.php [L]
+    RewriteRule .* index.php [L]
 
 </IfModule>
 
